--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -169,6 +169,9 @@ ul#simulate-stats input,
 	text-align: center;
 	float: right;
 }
+.sub-control {
+	margin-top: 5px;
+}
 .controls input {
 	padding: 10px;
 }
@@ -311,6 +314,19 @@ ul#simulate-stats input,
 }
 .d3up-table td.name {
 	width: 350px;
+}
+.d3up-table td.guide {
+	
+}
+.d3up-table td.guide p {
+	margin: 0;
+	line-height: 1.4em;
+	color: #888;
+	margin-left: 10px;
+}
+.d3up-table td.guide p:first-child {
+	margin: 0;
+	font-weight: bold;
 }
 .home .d3up-table td.name {
 	width: 150px;
@@ -480,11 +496,32 @@ dd:has(:focus) .chzn-container {
 	font-weight: bold;
 	margin: 0 0 10px;
 }
+.featured,
 .build-header {
 	border: 1px solid #333;
 	text-shadow: 1px 2px 2px #000;
 	margin-bottom: 5px;
 	padding-bottom: 0;
+}
+.featured {
+	font-size: 1.2em;
+	margin:0;
+}
+.guide-pages, 
+.guide-filters {
+	margin: 5px 15px;
+}
+.guide-filters {
+	text-align: right;
+	float: right;
+}
+.guide-pages {
+	font-size: 1.2em;
+	font-weight: bold;
+}
+.guide-pages span, 
+.guide-pages a {
+	margin-right: 5px;
 }
 .build-header h2 {
 	color: #7FCDFF;
@@ -1024,65 +1061,63 @@ tr.compared > td:first-child {
 	text-align: center;
 	margin: 0;
 }
-#guide div.title {
+div.title-block {
 	position: relative;
 	background-image: url('/images/bgs/default.jpeg');
 }
-.build-header[data-class=barbarian],
-#guide[data-class=barbarian] div.title {
+.title-block[data-class=barbarian],
+#guide[data-class=barbarian] div.title-block {
 	background-image: url('/images/bgs/barbarian.jpeg');
 }
-.build-header[data-class=demon-hunter],
-#guide[data-class=demon-hunter] div.title {
+.title-block[data-class=demon-hunter],
+#guide[data-class=demon-hunter] div.title-block {
 	background-image: url('/images/bgs/demon-hunter.jpeg');
 }
-.build-header[data-class=witch-doctor],
-#guide[data-class=witch-doctor] div.title {
+.title-block[data-class=witch-doctor],
+#guide[data-class=witch-doctor] div.title-block {
 	background-image: url('/images/bgs/witch-doctor.jpeg');
 }
-.build-header[data-class=monk],
-#guide[data-class=monk] div.title {
+.title-block[data-class=monk],
+#guide[data-class=monk] div.title-block {
 	background-image: url('/images/bgs/monk.jpeg');
 }
-.build-header[data-class=wizard],
-#guide[data-class=wizard] div.title {
+.title-block[data-class=wizard],
+#guide[data-class=wizard] div.title-block {
 	background-image: url('/images/bgs/wizard.jpeg');
 }
-#build div.title,
-#guide div.title {
+#build div.title-block,
+#guide div.title-block {
 	border: 1px solid #333;
 	text-shadow: 1px 2px 2px #000;
 }
-#build div.title h1,
-#build div.title h2,
-#build div.title > h3,
-#build div.title h5,
-#guide div.title h1,
-#guide div.title h2,
-#guide div.title h5 {
+
+div.title-block > h3,
+div.title-block h1,
+div.title-block h2,
+div.title-block h5 {
 	margin: 0;
 	padding: 20px 20px 0;
 	background: rgba(0, 0, 0, 0.5); 
 }
-#build div.title h3 {
+#build div.title-block h3 {
 	padding: 0 20px 0;	
 }
-#build div.title h5,
-#build div.title h2,
-#guide div.title h5,
-#guide div.title h2 {
+div.title-block h5,
+div.title-block h2,
+div.title-block h5,
+div.title-block h2 {
 	padding-top: 10px;
 }
-#build div.title h5 {
+#build div.title-block h5 {
 	padding-top: 0;
 	padding-bottom: 20px;
 }
-#build div.title h2
-#guide div.title h2 {
+#build div.title-block h2
+#guide div.title-block h2 {
 	color: #ececec;
 	font-size: 1.2em;
 }
-#guide div.title h5 {
+#guide div.title-block h5 {
 	font-size: 1.1em;
 	color: #999;
 	font-weight: normal;
@@ -1099,6 +1134,11 @@ tr.compared > td:first-child {
 	width: 960px;
 	padding-bottom: 5px;
 }
+#toolbar .ui-button {
+	color: #fff;
+	padding: 2px 5px;
+	border: 1px solid #333;
+}
 #toolbar h2 {
 	margin: 0;
 }
@@ -1108,9 +1148,12 @@ tr.compared > td:first-child {
 	top: 0;		
 	z-index: 9999;
 }
-#save-status {
+#save-status,
+#publish-status {
+	font-weight: bold;
 	color: #0f0;
 }
+#publish-status.false,
 #save-status.unsaved {
 	color: #f00;
 }
@@ -1123,16 +1166,24 @@ tr.compared > td:first-child {
 	-ms-user-select: none;
 	user-select: none;
 }
+#guides,
 #guide {
 	border: 2px solid #000;
 	font: 14px Arial;
 	line-height: 1.5em;
 }
+#guides,
 .section {
 	background-color: #171614;
 	border: 1px solid #333;
 	margin: 5px 2px;
 }
+#guides {
+	border: 1px solid #111;
+	padding: 2px;
+	background-color: #222;
+} 
+
 .section .section-content  {
 	padding: 25px;
 }
@@ -1145,7 +1196,7 @@ tr.compared > td:first-child {
 	margin: 0;
 	padding: 15px 15px;
 	color: #B18135;
-	background-color: #111;
+	background-color:rgba(0,0,0,0.2);
 	border-bottom: 1px solid #333;
 }
 .section .editing textarea {
@@ -1155,15 +1206,48 @@ tr.compared > td:first-child {
 	margin: 5px;
 	float: right;
 }
+.section-control label {
+	vertical-align: middle;
+	margin-right: 5px;	
+}
+.section-control input {
+	vertical-align: middle;
+	margin: 2px 10px 0 0;
+}
 .section-control .button {
 	margin: 5px;
 	cursor: pointer;
 }
-#guide div.title h5 .author,
-#guide div.title h5 .date {
+#guide div.title-block h5 .author,
+#guide div.title-block h5 .date {
 	color: #A8DAFF;
 }
 #guide div.toc.section {
+}
+div.toc.section {
+	position: relative;
+	background-image: url('/images/bgs/toc-default.jpeg');
+	background-repeat: no-repeat;
+}
+#guide[data-class=barbarian] div.toc.section {
+	background-image: url('/images/bgs/toc-barbarian.jpeg');
+	background-repeat: no-repeat;
+}
+#guide[data-class=demon-hunter] div.toc.section {
+	background-image: url('/images/bgs/toc-demon-hunter.jpeg');
+	background-repeat: no-repeat;
+}
+#guide[data-class=witch-doctor] div.toc.section {
+	background-image: url('/images/bgs/toc-witch-doctor.jpeg');
+	background-repeat: no-repeat;
+}
+#guide[data-class=monk] div.toc.section {
+	background-image: url('/images/bgs/toc-monk.jpeg');
+	background-repeat: no-repeat;
+}
+#guide[data-class=wizard] div.toc.section {
+	background-image: url('/images/bgs/toc-wizard.jpeg');
+	background-repeat: no-repeat;
 }
 #guide div.toc.section h3 {
 	margin: 0;
@@ -1172,12 +1256,12 @@ tr.compared > td:first-child {
 #guide div.toc.section ul#toc {
 	font-size: 1.1em;
 	margin: 0px;
-	padding: 25px;
+	padding: 25px 50px;
 	list-style: none;
 	font-size: 1.25em;
 	line-height: 1.8em;
-/*	background: rgb(0,0,0);*/
-/*	background: rgba(0,0,0,0.7);*/
+	background: rgb(0,0,0);
+	background: rgba(0,0,0,0.5);
 }
 
 #guide div.toc.section ul#toc li:before {
@@ -1200,20 +1284,13 @@ tr.compared > td:first-child {
 #guide div.passives.section ul.selectedPassives li,
 #guide div.skills.section ul.selectedSkills li {
 	margin: 0;
-	padding: 5px 35px;
 	border-top: 1px solid #333;
-	clear: both;
 }
 #guide div.passives.section ul.selectedPassives li h3,
 #guide div.skills.section ul.selectedSkills li h3 {
 	border: 0;
-	line-height: 35px;
-	margin-left: 80px;
+	line-height: 10px;
 	cursor: text;
-}
-#guide div.passives.section ul.selectedPassives li img,
-#guide div.skills.section ul.selectedSkills li img{
-	float: left;
 }
 #guide #ratings-display {
 	position: absolute;
@@ -1226,7 +1303,11 @@ tr.compared > td:first-child {
 	font-size: 16px;
 }
 #guide .skill-content {
-	margin: 20px 0;
+	margin: 5px 30px 10px;
+	padding: 10px 15px;
+	border-radius: 10px;
+	background: #000;
+	border: 3px solid #333;
 }
 #guide .skill-picker {
 	margin: 20px 30px;
@@ -1234,12 +1315,36 @@ tr.compared > td:first-child {
 #guide .skill-picker select {
 	margin-left: 10px;
 }
-#guide .skill-block h3 {
-	color: #ececec;
+#guide .skill-block img {
+	margin: 0 20px 0;
+	height: 32px;
 }
-
+#guide .skill-block h3 {
+	margin: 10px 0;
+	color: #ececec;
+	font-size: 1.4em;
+	vertical-align: middle;
+}
 .section img {
 	max-width: 890px;
 	border: 1px solid #333;
 	margin: 5px 5px 20px;
+}
+.wrap-button {
+	float: left;
+	display: block;
+	margin: 14px 10px;
+	padding: 2px;
+	cursor: pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.section-preview {
+	background: #000;
+	background: rgba(0,0,0,0.7);
+	padding: 10px 20px;
 }
