Other part of skill reset.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -73,7 +73,7 @@ var activeActives = [];
 			<? if($profile): ?>
 			<li><a href="#build-compare">Compare</a></li>
 			<? endif ?>
-			<li><a href="#item-simulate">Simulate Item</a></li>
+			<li><a href="#item-simulate" id="item-sim-tab">Simulate Item</a></li>
 		</ul>
 		<div id="build-skills">
 			<a <?= (!$myBuild) ? "style='display: none'" : ""?>  class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only skill-change"><span class="ui-button-text">Change My Skills</span></a>
