Guides title update.

--- a/application/views/scripts/guide/index.phtml
+++ b/application/views/scripts/guide/index.phtml
@@ -1,3 +1,6 @@
+<?
+$this->headTitle("Diablo 3 Guides"); 
+?>
 <div id="guides">
 	<div class='featured title-block' data-class="<?= $this->featured->class ?: 'all' ?>">
 		<h5 style='color: #B18135'>Featured Guide</h5>
