--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<?= $this->headTitle("Diablo 3 DPS/EHP Calculator")->setSeparator(' | '); ?>
 	<meta name="description" content="Calculate your Diablo 3 Characters DPS/EHP from your gear" />
 	<meta name="keywords" content="diablo 3, dps, ehp, gear, calculator, effective health pool, tool, compare" />
@@ -41,10 +42,10 @@
 			</div>
 			<div id="header-content" class="inline-flow">
 				<div id="navigation-wrapper">
-					<h1 class="table-header">Diablo 3 EHP/DPS/Gear Calculator</h1>
+					<h2 class="table-header">Diablo 3 EHP/DPS/Gear Calculator</h2>
 					<ul id="navigation" class="dropdown ui-helper-clearfix ui-widget ui-widget-content"  style="text-align: center">
 						<li><a href="/">Home</a></li>
-						<!-- <li><a href="/guide">Guides <img src='/images/down-arrow.png' /></a>
+						<li><a href="/guide">Guides <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/guide/create">Create Guide</a></li>
 								<li><a href="/user/guides">My Guides</a></li>
@@ -55,7 +56,7 @@
 								<li class='wizard'><a href="/guide?class=wizard">Wizard</a></li>
 								<li><a href="/guide">All Guides</a></li>
 							</ul>
-						</li> -->
+						</li>
 						<li><a href="/items">Items <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/item/create">Create Item</a></li>
@@ -107,7 +108,7 @@
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
 					Aug 25 - 
-					New version is live! If you notice your 'Copy from Battle.net' button is missing, please enter your BattleTag on your profile and it will re-appear. Check out <a href="/update/25">the notes for all the details</a> of this update. 
+					The new Guides section is now live! Feel free to wander over and check it out, create a guide or <a href="/updates/26">check this update for all the details</a>!
 					Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
