Fix to sys message.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -108,7 +108,7 @@
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
 					Aug 25 - 
-					The new Guides section is now live! Feel free to wander over and check it out, create a guide or <a href="/updates/26">check this update for all the details</a>!
+					The new Guides section is now live! Feel free to wander over and check it out, create a guide or <a href="/update/26">check this update for all the details</a>!
 					Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
