Builds can now be created anonymously.

--- a/application/views/scripts/guide/index.phtml
+++ b/application/views/scripts/guide/index.phtml
@@ -1,7 +1,7 @@
 <?
 $this->headTitle("Diablo 3 Guides"); 
 ?>
-<div id="guides">
+<div id="guides" class="content-page">
 	<div class='featured title-block' data-class="<?= $this->featured->class ?: 'all' ?>">
 		<h5 style='color: #B18135'>Featured Guide</h5>
 		<h2><?= $this->guideLink($this->featured) ?></h2>
