Updated system message.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -107,8 +107,8 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Aug 25 - 
-					The new Guides section is now live! Feel free to wander over and check it out, create a guide or <a href="/update/26">check this update for all the details</a>!
+					Sept 2 - 
+					Adding your build to D3Up.com just got a lot easier! Automatically import your profile from the armory on build creation or start from scratch, just <a href="/build/create">click here to get started</a>. Also, here's the <a href="/update/27">patch notes</a>.
 					Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
