--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -235,10 +235,10 @@ var activeActives = [];
 			</ul>
 			<div style="background-image: none; padding: 15px 15px 0">
 				<select id="vsLevel">
-					<option value="60" selected="selected">Stats vs Level 60 Monster</option>
-					<option value="61">Stats vs Level 61 Monster</option>
-					<option value="62">Stats vs Level 62 Monster</option>
-					<option value="63">Stats vs Level 63 Monster</option>
+					<option value="60" selected="selected">Stats vs 60 Monster</option>
+					<option value="61">Stats vs 61 Monster</option>
+					<option value="62">Stats vs 62 Monster</option>
+					<option value="63">Stats vs 63 Monster</option>
 				</select>
 				<select id="paragonLevel">
 					<option value="">Paragon Level</option>
