Anyone can change skills on builds, but can't save.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -84,7 +84,7 @@ var activeActives = [];
 			<li><a href="#item-simulate" id="item-sim-tab">Simulate Item</a></li>
 		</ul>
 		<div id="build-skills">
-			<a <?= (!$myBuild) ? "style='display: none'" : ""?>  class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only skill-change"><span class="ui-button-text">Change My Skills</span></a>
+			<a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only skill-change"><span class="ui-button-text">Change Skills</span></a>
 			<div id="skill-chooser">
 			</div>
 			<ul id='build-active-skills'></ul>
