Added check to make sure it was a shield for rendering block chance on an item.

--- a/application/views/scripts/record/item.phtml
+++ b/application/views/scripts/record/item.phtml
@@ -84,7 +84,7 @@
 <?= $this->record->stats['speed'] ?> attack speed
 <? elseif(isset($this->record->stats['armor'])): ?>
 <?= $this->record->stats['armor']?> Armor
-<? if(isset($this->record->stats['block-chance'])):?>
+<? if(isset($this->record->stats['block-chance']) && $this->record->type == 'shield'):?>
 +<?= $this->record->stats['block-chance']?>% Block Chance
 <?= implode("-", $this->record->stats['block-amount']->export()) ?> Block Amount
 <? endif?>
